<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.epam.mobitru.screens.login.LoginFragment"
        android:label=""
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_MainFragment"
            app:destination="@id/MainFragment"
            app:popUpTo="@id/LoginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/MainFragment"
        android:name="com.epam.mobitru.main.MainFragment"
        android:label=""
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_MainFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_MainFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_MainFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_MainFragment_to_sortFragment"
            app:destination="@id/sortFragment" />
        <action
            android:id="@+id/action_MainFragment_to_showOrderFragment"
            app:destination="@id/showOrderFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.epam.mobitru.screens.about.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.epam.mobitru.screens.editProfile.EditProfileFragment"
        android:label="@string/edit_account_title"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.epam.mobitru.screens.cart.CartFragment"
        android:label="@string/cart_title"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cartFragment_to_reviewOrderFragment"
            app:destination="@id/reviewOrderFragment" />
        <action
            android:id="@+id/action_BackToShopping"
            app:destination="@id/MainFragment"
            app:popUpTo="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/sortFragment"
        android:name="com.epam.mobitru.screens.home.sort.SortFragment"
        android:label="@string/screen_title_sort_by"
        tools:layout="@layout/fragment_sort" />
    <fragment
        android:id="@+id/reviewOrderFragment"
        android:name="com.epam.mobitru.screens.reviewOrder.ReviewOrderFragment"
        android:label="@string/fragment_review_order"
        tools:layout="@layout/fragment_review_order">
        <action
            android:id="@+id/action_reviewOrderFragment_to_completedOrderFragment"
            app:destination="@id/completedOrderFragment"
            app:popUpTo="@id/MainFragment" />
        <action
            android:id="@+id/action_reviewOrderFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/completedOrderFragment"
        android:name="com.epam.mobitru.screens.completedOrder.CompletedOrderFragment"
        android:label="@string/order_completed_title"
        tools:layout="@layout/fragment_completed_order" />
    <fragment
        android:id="@+id/showOrderFragment"
        android:name="com.epam.mobitru.screens.showOrder.ShowOrderFragment"
        android:label="ShowOrderFragment"
        tools:layout="@layout/fragment_show_order">
        <argument
            android:name="orderId"
            app:argType="string" />
    </fragment>
</navigation>